[tool.poetry]
name = "amperebot"
version = "0.1.0"
description = ""
authors = ["Lucius C. <58442255+czlucius@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8,  <3.12"
aiohttp = "^3.7.0"
py-cord = "^2.0.1"
python-dotenv = "^0.20.0"
py-expression-eval = "^0.3.14"
base58 = "^2.1.1"
pybase62 = "^0.5.0"
base45 = "^0.4.3"
pycryptodome = "^3.15.0"
aiopyston = "^1.2.1"
libretranslatepy = "^2.1.2"
advent-of-code-data = "^1.3.2"
beautifulsoup4 = "4.11.1"
markdownify = "^0.11.6"
pymongo = {extras = ["srv"], version = "^4.3.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
